--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
 
-    <title>Desafio Erik - Front-End</title>
+    <title>Erik - Front-End</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
